[package]
name = "rp-blink-twice"
version = "0.1.0"
authors = ["Kevin Nause <kevin@nause.engineering>"]
edition = "2021"
license = "MIT"

[dependencies.rtic]
version = "2.0"
features = ["thumbv6-backend"]
path = "rtic/rtic"

[dependencies.rtic-monotonics]
path = "rtic/rtic-monotonics"
version = "2.0"
features = ["rp2040"]

[dependencies.embassy-executor]
version = "0.5"
features = ["arch-cortex-m", "executor-thread", "defmt"]

[dependencies.embassy-rp]
version = "0.1"
features = ["defmt", "unstable-pac", "critical-section-impl"]

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1.0"
fugit = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
rp-pac = "6.0"
static_cell = "2.1"

[profile.dev]
opt-level = 0
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"
codegen-units = 1
debug = false
lto = true
